# VisionModule

./: .gitignore  CMakeLists.txt  README.md
libvideo/: colourdefinition.cpp  colourdefinition.h  dc1394device.cpp  dc1394device.h  edgedetection.cpp  filedevice.cpp  filedevice.h  floodfillstate.cpp  floodfillstate.h  framebuffer.cpp  framebuffer.h  framebufferbayer.cpp  framebufferbayer.h  framebufferrgb24.cpp  framebufferrgb24.h  framebufferrgb24be.cpp  framebufferrgb24be.h  framebufferrgb32.cpp  framebufferrgb32.h  framebufferrgb32x.cpp  framebufferrgb32x.h  framebufferrgb565.cpp  framebufferrgb565.h  geometry.cpp  geometry.h  imageprocessing.cpp  imageprocessing.h  integralimage.cpp  integralimage.h  jpeg_utils.cpp  jpeg_utils.h  pixel.cpp  pixel.h  point.h  quadtreedecomposition.cpp  quadtreedecomposition.h  rect.cpp  rect.h  v4l2device.cpp  v4l2device.h  (+4 more)
src/: config.h.in  configuration.cpp  configuration.h  globals.cpp  globals.h  httpd.cpp  httpd.h  httpdclientthread.cpp  httpdclientthread.h  httpdserverthread.cpp  httpdserverthread.h  httpdthread.cpp  httpdthread.h  jpeg_utils.cpp  main.cpp  serial.cpp  serial.h  udpvisionserver.cpp  udpvisionserver.h  videostream.cpp  videostream.h  visionclientmain.cpp
www/: jquery-ui.css  visionmodulecontroller.css  visionmodulecontroller.html  visionmodulecontroller.js
